sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  
{
var n=getNombreValeurs() 
var fini=0
var temp=0


do
{
	inverse==false
	for(i<-0 to n-2)
		{
			if(plusPetit(i,i+1)
			{
				echange(i+1,i)
				inverse==true
			}
		}


} while(inverse)







